Fixed spacing under 5280 Landmarks

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -32,6 +32,13 @@ body {
   margin:25px;
 }
 
+h1.headline {
+  font-size:23px;
+  font-weight:bold;
+  color: #FFFFFF;
+  padding-bottom:0px;
+}
+
 p {
   margin-bottom:10px;
 }
